syntax = "proto3";
package swap.sale;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "swap/sale/params.proto";
import "swap/sale/sale.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/yoshidan/cosmos-trustless-swap/x/sale/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/swap/sale/params";
  }
  // Queries a list of Show items.
	rpc Show(QueryShowRequest) returns (QueryShowResponse) {
		option (google.api.http).get = "/swap/sale/show/{id}";
	}

// Queries a list of ShowNFT items.
	rpc ShowNFT(QueryShowNFTRequest) returns (QueryShowNFTResponse) {
		option (google.api.http).get = "/swap/sale/show_nft/{id}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryShowRequest {
  uint64 id = 1;
}

message QueryShowResponse {
  Sale sale = 1;
}

message QueryShowNFTRequest {
  uint64 id = 1;
}

message QueryShowNFTResponse {
  NFTSale sale = 1;
}

// this line is used by starport scaffolding # 3
